# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1244 2013/04/04 00:12:57 zmedico Exp $

  04 Apr 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.59.ebuild,
  -portage-2.2.0_alpha170.ebuild:
  Remove old versions.

*portage-2.2.0_alpha171 (01 Apr 2013)

  01 Apr 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha171.ebuild:
  2.2.0_alpha171 version bump. This includes all of the fixes in 2.1.11.60. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.60 (01 Apr 2013)

  01 Apr 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.60.ebuild:
  2.1.11.60 version bump. This fixes bug #433561 (allow repo-name setting in
  metadata/layout.conf) and bug #462936 (fix automatic manpage decompression
  code and related broken man page symlinks). Bug #462382 tracks all bugs fixed
  since portage-2.1.11.55.

  31 Mar 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.58.ebuild,
  -portage-2.2.0_alpha169.ebuild:
  Remove old versions.

  28 Mar 2013; Joseph Jezak <josejx@gentoo.org> portage-2.1.11.55.ebuild:
  Marked ppc/ppc64 stable for bug #462134.

*portage-2.2.0_alpha170 (27 Mar 2013)

  27 Mar 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha170.ebuild:
  2.2.0_alpha170 version bump. This includes all of the fixes in 2.1.11.59. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.59 (27 Mar 2013)

  27 Mar 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.59.ebuild:
  2.1.11.59 version bump. This fixes bug #461868 (don't try to preserve security
  labels when copying xattrs), bug #462694 (handle ENOLCK for NFS), bug #462802
  (fix ebuild.sh path in man pages), bug #456296 (don't use FD_CLOEXEC for
  stdout on Darwin), bug #463266 (support make.conf as directory), and bug
  #463394 (make autounmask respect keywords when unmasking package.mask if