@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-9999.ebuild,v 1.73 2013/03/26 05:17:45 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-9999.ebuild,v 1.74 2013/04/04 17:45:27 zmedico Exp $
 
 EAPI=3
 PYTHON_COMPAT=(
@@ -335,6 +335,12 @@ src_install() {
 	local impl files mod_dir dest_mod_dir python relative_path x
 	for impl in "${PYTHON_COMPAT[@]}" ; do
 		use "python_targets_${impl}" || continue
+		if use build && [[ ${ROOT} == / &&
+			! -x ${EPREFIX}/usr/bin/$(get_python_interpreter ${impl}) ]] ; then
+			# Tolerate --nodeps at beginning of stage1 for catalyst
+			ewarn "skipping python_targets_${impl}, interpreter not found"
+			continue
+		fi
 		while read -r mod_dir ; do
 			cd "${ED}/usr/lib/portage/pym/${mod_dir}" || die
 			files=$(echo *.py)
